--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Tureal NPC Locations
+author=KoffieMok
 support=
-description=An example greeter plugin
+description=A simple overlay to show location of current task
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.tureallocations.TurealLocationsPlugin
